--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.6",
     "ajv": "^8.11.0",
     "classnames": "^2.2.6",
+    "framer-motion": "^6.5.1",
     "moment": "^2.29.3",
     "node-forge": ">=1.3.0",
     "node-sass": "^6.0.0",
