--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "framer-motion": "^6.5.1",
     "moment": "^2.29.3",
     "node-forge": ">=1.3.0",
-    "node-sass": "^6.0.0",
     "object-path": "^0.11.8",
     "postcss": "^8.4.14",
     "postcss-normalize": "^10.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "sass": "^1.77.8"
   },
   "scripts": {
     "start": "react-scripts start",
