--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "van-portfolio-v2",
   "version": "1.0.0",
+  "homepage": "https://vanthuynh.github.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -30,6 +31,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -51,6 +54,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   }
